--- a/VRChat/33/1334533.html
+++ b/VRChat/33/1334533.html
@@ -78,10 +78,11 @@
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <div class="page-wrap">
       <main role="main">
-        <div class="market-item-detail" data-product-brand=
-        "ultragunsatomic" data-product-category="127"
-        data-product-id="1334533" data-product-list="market_show"
-        data-product-price="500" data-tracking="detail_item">
+        <div class="market-item-detail u-bg-white"
+        data-product-brand="ultragunsatomic" data-product-category=
+        "127" data-product-id="1334533" data-product-list=
+        "market_show" data-product-price="500" data-tracking=
+        "detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
               <div class="container">
@@ -104,17 +105,17 @@
             </div>
           </nav>
           <article>
-            <div class="market-item-detail-article">
+            <div class=
+            "market-item-detail-article u-d-flex u-flex-column u-align-items-center u-pb-600 u-bg-white">
               <div class=
               "market-item-detail__exhibition-banner container">
               </div>
-              <div class="market-item-detail-article__body">
+              <div class="u-bg-white u-pt-600 u-px-700">
                 <div class="container">
-                  <div class="lo-grid">
-                    <div class="flex-order-summary">
+                  <div class="u-d-flex">
+                    <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
-                        <div class=
-                        "flex-order-summary-shop_name-field">
+                        <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
                           "from market_show via market_item_detail to shop_index"
@@ -125,13 +126,13 @@
                             <img alt="Ultra Guns Atomic" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/2054840/icon_image/80500c3b-3460-4dc6-88cd-ed6b4ea85700_base_resized.jpg">
-                            <div class=
-                            "flex-order-summary-shop_name">
+                            <div class="u-text-ellipsis">
                               Ultra Guns Atomic
                             </div>
                           </div></a>
                         </div>
-                        <h2 class="item-summary__item-name">
+                        <h2 class=
+                        "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           VRchat向け『仕込みブレード』392ポリゴン ☆2種追加しました
                         </h2>
                         <div class="item-summary__caption"></div>
@@ -220,18 +221,17 @@
                         </ul>
                       </section>
                       <section>
-                        <div class="share-btns">
-                          <div class="social-btn twitter">
-                            <a data-url=
-                            "https://booth.pm/ja/items/1334533"
-                            data-lang="ja" data-hashtags="booth_pm"
-                            data-text=
-                            "VRchat向け『仕込みブレード』392ポリゴン ☆2種追加しました | Ultra Guns Atomic"
-                            data-count="none" class=
-                            "twitter-share-button" href=
-                            "https://twitter.com/share">ツイート</a>
-                          </div>
-                          <div class="social-btn facebook">
+                        <div class=
+                        "share-btns u-d-flex u-flex-1 u-align-items-center u-justify-content-start u-px-200 u-py-400">
+                          <a data-url=
+                          "https://booth.pm/ja/items/1334533"
+                          data-lang="ja" data-hashtags="booth_pm"
+                          data-text=
+                          "VRchat向け『仕込みブレード』392ポリゴン ☆2種追加しました | Ultra Guns Atomic"
+                          data-count="none" class=
+                          "twitter-share-button" href=
+                          "https://twitter.com/share">ツイート</a>
+                          <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
                             data-href=
                             "https://booth.pm/ja/items/1334533"
@@ -241,7 +241,7 @@
                         </div>
                       </section>
                     </div>
-                    <div class="flex-order-body">
+                    <div class="u-order-0 l-col-3of5 u-pr-500">
                       <div class="primary-image-area">
                         <div>
                           <div class=
@@ -305,8 +305,8 @@
                       </div>
                       <section>
                         <div class=
-                        "market-item-detail-description">
-                          <p class="autolink">
+                        "js-market-item-detail-description">
+                          <p class="autolink u-text-wrap">
                             更新履歴 4/29　仕込みブレードのバリエーションを2種追加しました。
                             -----------------
                             『袖の中に隠せるほど小さく、両手を使うこともなく切り裂くことのできる武器があるとすれば最高の暗殺者になれることでしょう。この仕込みブレードは遥か昔から時代の闇の中で使い続けられてきたものを参考に作られました。なお、ブレードを展開した際に自身の指を切ってしまうという評価が多数届いているため、あらかじめ薬指を切断しておくことをオススメします。』
@@ -346,8 +346,7 @@
                         </div>
                       </section>
                       <section>
-                        <div class=
-                        "market-item-detail-module page_design" id=
+                        <div class="u-text-wrap page_design" id=
                         "modules"></div>
                       </section>
                     </div>
